--- a/app/views/questions/answer.html.erb
+++ b/app/views/questions/answer.html.erb
@@ -1,7 +1,19 @@
 <h1>Stupid Coaching</h1>
 
-<%= params[:question] %>
-<p><i>-You</i></p>
+<div class="container">
+  <div class="question left-grey-border">
+    <%= params[:question] %>
+    <p><em>-You</em></p>
+  </div>
 
-<%= @answer %>
-<p><i>-Your coach</i></p>
+  <div class="answer left-grey-border">
+    <strong><%= @answer %></strong>
+    <p><em>-Your coach</em></p>
+  </div>
+
+  <div>
+    <%= link_to "Ask a new question", ask_path %>
+  </div>
+</div>
+
+
